# flakes

./: .editorconfig  README.md  flake.nix
java/: flake.nix
rust/: .editorconfig  flake.nix
rust-webapp/: .env  Cargo.toml  docker-compose.yml  flake.nix
rust-webapp/app/: Cargo.toml
rust-webapp/app/src/: main.rs
rust-webapp/common/: Cargo.toml
rust-webapp/common/src/: config.rs  lib.rs
rust-webapp/db/: Cargo.toml  build.rs
rust-webapp/db/migrations/: U1__users.sql
rust-webapp/db/queries/: users.sql
rust-webapp/db/src/: lib.rs
rust-webapp/web/: Cargo.toml
rust-webapp/web/src/: assets.rs  context.rs  error.rs  lib.rs  router.rs  server.rs
rust-webapp/web/src/handler/: mod.rs
rust-webapp/web/src/view/: common.rs  error.rs
