[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
dotenvy = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
built = { workspace = true }
