[package]
name = "web"
version.workspace = true
edition = "2021"

[dependencies]
tracing = { workspace = true }

axum = { workspace = true }

maud = { workspace = true }

tokio = { workspace = true }
tower = { workspace = true }

rust-embed = { workspace = true }
axum-embed = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

db = { path = "../db" }
